components/kyma-environment-broker/config/500-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: kyma-environment-broker
  name: compass-kyma-environment-broker
  namespace: compass-system
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: compass
    app.kubernetes.io/name: kyma-environment-broker
