components/kyma-environment-broker/config/550-echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: compass-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - image: mendhak/http-https-echo
          imagePullPolicy: Always
          name: echoserver
          ports:
            - containerPort: 80
            - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: compass-provisioner
  namespace: compass-system
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: echoserver
---
apiVersion: v1
kind: Service
metadata:
  name: compass-director
  namespace: compass-system
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: echoserver
---
apiVersion: v1
kind: Service
metadata:
  name: lms
  namespace: compass-system
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: echoserver
